build cost mission loc

--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -217,3 +217,24 @@ gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed."
  enserfed_peasants_desc:0 ""
  full_serfdom_title:0 "Full Serfdom"
  full_serfdom_desc:0 ""
+
+#high income missions
+
+ cri_high_income_mission_title:0 "High Income"
+ cri_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ mer_high_income_mission_title:0 "High Income"
+ mer_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ mor_high_income_mission_title:0 "High Income"
+ mor_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ por_high_income_mission_title:0 "High Income"
+ por_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ cas_high_income_mission_title:0 "High Income"
+ cas_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ bur_high_income_mission_title:0 "High Income"
+ bur_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ hsa_high_income_mission_title:0 "High Income"
+ hsa_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ mos_high_income_mission_title:0 "High Income"
+ mos_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ hab_high_income_mission_title:0 "High Income"
+ hab_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
