--- a/localisation/gecko_countries_l_english.yml
+++ b/localisation/gecko_countries_l_english.yml
@@ -3,3 +3,9 @@
   HET_ADJ:0 "Hetmanate"
   GZM:0 "Great Zimbabwe"
   GZM_ADJ:0 "Great Zimbabwe"
+
+  #Germans
+  NGF:0 "North German Federation"
+  NGF_ADJ:0 "North German"
+  SGF:0 "South German Federation"
+  SGF_ADJ:0 "South German"
