--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -49,3 +49,10 @@
  h_found_riyadh_desc:0 "With the construction of the walled oases, the Najd has become the center of our empire in all but name. Let us construct a new capital for Arabia in Kharj. It will take the name 'Riyadh', after the gardens of the local oases."
  gecko_recruit_military_advisor_title:0 "Recruit Military Advisor"
  gecko_recruit_military_advisor_desc:0 ""
+
+ #Germans
+ gc_form_ngf_title:0 "Unite North Germany"
+ gc_form_ngf_desc:0 ""
+
+ gc_form_sgf_title:0 "Unite South Germany"
+ gc_form_sgf_desc:0 ""
