Empowered subjects limited to marches

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -20,11 +20,11 @@
  h_tooltip_many_allies:0 "You may have a maximum of five alliances."
  h_tooltip_from_many_allies:0 "The target already has five alliances."
  h_tooltip_many_marches_noinfluence:0 "You may have a maximum of four subjects without Influence ideas."
- h_tooltip_many_marches_influence:0 "You may have a maximum of three subjects and two marches with Influence ideas."
+ h_tooltip_many_marches_influence:0 "You may have a maximum of three marches with Influence ideas."
  h_tooltip_move_capital:0 "You may not move your capital to the new world."
  h_tooltip_cn_colonize:0 "You may not colonize provinces outside of your colonial region."
  tribute_system:0 "Empowered Subjects"
- tribute_system_desc:0 "Enables Empowered Subjects modifier, which sigificantly increases the power of your subjects."
+ tribute_system_desc:0 "Enables Empowered Subjects modifier, which sigificantly increases the power of your marches."
  commercial_monopoly:0 "Commercial Monopoly"
  exp_bill_of_rights:0 "Bill of Rights"
  exp_bill_of_rights_desc:0 "By granting the citizens certain fundamental rights, we reduce the likelihood of a peasant uprising."
