Mongolia slot part 1

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -56,6 +56,7 @@
  conquest_of_tabriz:0 "Conquest of Tabriz"
  conquest_of_samarkand:0 "Conquest of Samarkand"
  conquest_of_herat:0 "Conquest of Herat"
+ gc_mongol_kurultai:0 "Annual Kurultai"
 
 
  #Advisor Event modifiers
