Localisation part cleanup

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -324,7 +324,7 @@
  ab_mercenary_discipline:0 "Mercenary Discipline"
  splendor:0 "Splendor"
  feudal_de_jure_law:1 "Allows State Edict '§YFeudal De Jure Law§!'\n (Unrest: §G-5§!)\n"
- religion_enforced_edict:1 "Allows State Edict '§YReligion Enforced§!'\n (Resistance to Reformation: §G+90%§!)\n"
+ #religion_enforced_edict:1 "Allows State Edict '§YReligion Enforced§!'\n (Resistance to Reformation: §G+90%§!)\n"
  edict_of_absolutism_tt:1 "Allows State Edict '§YEdict of Absolutism§!'\n (Monthly Devastation: §G-0.25§!)\n"
  in_golden_era:0 "§YGolden Era§!"
  absolutism:0 "Absolutism"
@@ -1219,7 +1219,7 @@
  RPH_EMPEROR:0 "As the Emperor we cannot remove provinces from the Empire."
  RPH_PRINCE_OF_EMPIRE:0 "As a member of HRE, we cannot remove individual provinces from the HRE. If we leave the Empire we must give up any non-core HRE provinces"
  RPH_ELECTOR:0 "As an Elector, we cannot remove provinces from the Empire."
-RPH_AT_WAR:1 "We cannot remove provinces from the HRE while at war!"
+ RPH_AT_WAR:1 "We cannot remove provinces from the HRE while at war!"
  RPH_SUBJECT:0 "We need to be independent to remove provinces from the HRE."
  RPH_TRUCE_EMP:0 "It is not possible to remove provinces from the HRE while in a truce with the Emperor."
  WRONG_RELIGION_GROUP:0 "They belong to a different religion group and will not respond to such a demand."
@@ -2952,7 +2952,7 @@ RPH_AT_WAR:1 "We cannot remove provinces from the HRE while at war!"
  NO_MORE_BANKLOANS_UNCONDITIONAL:0 "Cannot take loans while unconditionally surrendered!"
  WE_IMPACT_ON_ANNEX_INTEGRATE:0 "Diplomatic Annexation and Integration: $VAL$\n"
  TRIBAL:0 "Tribal"
-NUM_OF_OWNED_PROVINCES_WITH:2 "$NUMBER|Y$ owned provinces (current: $CURRENT$) with"
+ NUM_OF_OWNED_PROVINCES_WITH:2 "$NUMBER|Y$ owned provinces (current: $CURRENT$) with"
  NUM_OF_OWNED_PROVINCES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:2 "$NUMBER|Y$ provinces (current: $CURRENT$) owned by you or your non-tributary subjects with"
  NUM_OF_OWNED_STATES_WITH:0 " states owned with"
  NUM_OF_OWNED_STATES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:0 " states owned by you or your non-tributary subjects with"
