--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -8,7 +8,7 @@
   egy_2:0 "Reform the Fellah System"
   egy_3:0 "Religious Tolerance"
   egy_4:0 "Purchase New Mamluks"
-  egy_5:0 "Camel breeding"
+  egy_5:0 "Camel Breeding"
   egy_7:0 "Breadbasket of the Mediterranean"
 
   egy_1_desc:0 "Our victory over the Mongols is far in the past, when we were the foremost military power in the world. Times have changed and our armies are no longer what they were. It is time to improve the training of our troops to ensure we do not fall behind."
