--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -88,3 +88,99 @@
  PROV6115:0 "Sifilke"
  PROV6116:0 "Tarsus"
  PROV6117:0 "Sis"
+ PROV5775:0 "Caltanissettan"
+ PROV5776:0 "Catania"
+ PROV5777:0 "Udine"
+ PROV5778:0 "Tolmezzo"
+ PROV5779:0 "Feltre"
+ PROV5780:0 "Nuoro"
+ PROV5781:0 "Corte"
+ PROV5782:0 "Ajaccio"
+ PROV5783:0 "Ivrea"
+ PROV5785:0 "Ossola"
+ PROV5786:0 "Catanzaro"
+ PROV5787:0 "Piacenza"
+ PROV6000:0 "Kerch"
+ PROV6001:0 "Kezlev"
+ PROV6002:0 "Cankoy"
+ PROV6003:0 "Kherson"
+ PROV6004:0 "Kakhovka"
+ PROV6005:0 "Nikopol"
+ PROV6006:0 "Odessa"
+ PROV1974:0 "Melitopol"
+ PROV282:0 "Podilsk"
+ PROV6007:0 "Mariupol"
+ PROV6008:0 "Donetsk"
+ PROV6009:0 "Tikhoretsk"
+ PROV6010:0 "Armavir"
+ PROV6011:0 "Stavropol"
+ PROV6012:0 "Salsk"
+ PROV6013:0 "Yashkul"
+ PROV6014:0 "Lagan"
+ PROV6015:0 "Saqsin"
+ PROV6016:0 "Volgograd"
+ PROV6017:0 "Amarar"
+ PROV6018:0 "Bayudi"
+ PROV6019:0 "Shendi"
+ PROV6020:0 "Selima-Matata"
+ PROV6021:0 "Hadendoa"
+ PROV6022:0 "Karima"
+ PROV6023:0 "Jaghbub"
+ PROV6024:0 "Al Wahat"
+ PROV6025:0 "Siwa"
+ PROV6026:0 "Mandishah"
+ PROV6028:0 "Spergge"
+ PROV6029:0 "Torra"
+ PROV1173:0 "Kunene"
+ PROV6030:0 "Semna"
+ PROV6124:0 "Padua"
+ PROV6125:0 "Senigallia"
+ PROV6126:0 "Otranto"
+ PROV6127:0 "Dscham"
+ PROV6128:0 "Tottu"
+ PROV6129:0 "Hissar"
+ PROV6130:0 "Katty kurgan"
+ PROV6131:0 "Iskander kul"
+ PROV6132:0 "Karatepe"
+ PROV6133:0 "Tasuj"
+ PROV6134:0 "Miandoab"
+ PROV6135:0 "Benab"
+ PROV6135:0 "Benab"
+ PROV6136:0 "Marand"
+ PROV6138:0 "Namin"
+ PROV6139:0 "Lankaran"
+ PROV6140:0 "Beylagan"
+ PROV6141:0 "Arzni"
+ PROV6142:0 "Bishak"
+ PROV6143:0 "Birjand Mountains"
+ PROV6144:0 "Ghilas"
+ PROV6145:0 "Sel"
+ PROV6146:0 "Feyad"
+#PROV6147:0 "Faris"
+ PROV6148:0 "Bestan"
+ PROV6149:0 "Kin"
+#PROV6150:0 "Gedman"
+ PROV6151:0 "Hira"
+ PROV6152:0 "Komshah"
+ PROV6153:0 "Katta"
+ PROV6154:0 "Seda"
+ PROV6155:0 "Khest"
+ PROV6156:0 "Ferabad"
+ PROV6157:0 "Astrabad"
+ PROV6046:0 "Spezia"
+ PROV6078:0 "Piacenza"
+ PROV6047:0 "Pistoia"
+ PROV6048:0 "Livorno"
+ PROV6051:0 "Viterbo"
+ PROV6045:0 "Reggio"
+ PROV6049:0 "Maremma"
+ PROV6052:0 "Frosinone"
+ PROV6053:0 "Caserta"
+ PROV6060:0 "Irpinia"
+ PROV6075:0 "Asti"
+ PROV6050:0 "Rimini"
+ PROV6053:0 "Caserta"
+ PROV6120:0 "Boeotia"
+ PROV6121:0 "Chania"
+ PROV6122:0 "Samos"
+ PROV6123:0 "Lemnos"
