--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -9,8 +9,6 @@
  buk_mission_restore_silk_road_desc:0 "Ever since our nation was created, we have been adamant that we are the heir of the Khan, heir of the Steppes, and heir of the Silk Road. Our wealth and glory, our trade and armies, all of us within our nation knows this to be the truth. Sadly it has taken others a long time to realise this, to end their scoffing and for us to punish the upstarts. Through our importation of artisans, our rebuilding of critical trade infrastructure, our irrigation of the desert; we have been able to restore the Silk Road."
  gecko_emp_hab_no_one_to_threaten_us_trigger_tooltip:0 "No HRE member state:\n         §Y30§! or more provinces in §YEurope§! are owned by §Ycountry§! or its by non-tributary subjects.\n         Is NOT subject to §YAustria§!."
  gecko_mil_vatican_library_tt:0 "§YThe Vatican Library - Military Edition§! will be established in §Y[118.GetName]§!, giving the following effects:\nMilitary Technology Cost: §G-5%§!\nDiscipline: §G+5%§!"
- swedish_empire_title:0 "Swedish Empire"
- swedish_empire_desc:0 "Through its conquests and military victories, Sweden has elevated itself to a Great Power."
  conquer_habsburgs_title:0 "Conquer the Habsburgs"
  conquer_habsburgs_desc:0 "We must conquer the great city of Vienna and establish our authority as Kayser of Europe."
 
@@ -52,133 +50,133 @@
  gecko_mam_mission_15_desc:0 ""
  gecko_mam_mission_16_desc:0 ""
  mam_turks_defeated_desc:0 ""
- mam_Mimar_Sinan's_Great_Constructions_title:0 "Mimar Sinan's Great Constructions"
- mam_Mimar_Sinan's_Great_Constructions_desc:0 "Mimar Sinan planned and oversaw the construction of countless mosques, aqueducts, bathhouses, bridges, palaces, caravanserais and schools during his half-a-century long career. His masterpieces were the Selimiye and Suleymaniye Mosques in Adrianople and Constantinople respectively."
+ mam_Mimar_Sinans_Great_Constructions_title:0 "Mimar Sinan's Great Constructions"
+ mam_Mimar_Sinans_Great_Constructions_desc:0 "Mimar Sinan planned and oversaw the construction of countless mosques, aqueducts, bathhouses, bridges, palaces, caravanserais and schools during his half-a-century long career. His masterpieces were the Selimiye and Suleymaniye Mosques in Adrianople and Constantinople respectively."
  mam_Expansion_of_the_Royal_Bureaucracy_title:0 "Expansion of the Royal Bureaucracy"
  mam_Expansion_of_the_Royal_Bureaucracy_desc:0 "Süleyman I was probably the greatest of the Ottoman Sultans. Called Kanuni (Lawgiver), he was an unsurpassed administrator who realized that the power of the provincial Beys had to be curbed by a strong central government. Thus he struggled to promote a powerful royal bureaucracy which was not popular in all camps..."
 
 #ottoman event missions
 
-g_military_reforms_of_mehmet:0 "This event will grant§G 10% Infanty Combat Ability§! for 20 years."
-g_enderun_academy:0 "This event gives the choice of §G2.5% Discipline§! or §G10% Cavalry Combat Ability§! for 20 years."
-g_naval_reform:0 "This event gives §G-5% Ship Cost§! until the end of the game."
-g_constructions:0 "This event gives §G-10% Development Cost§! and §G-10% Construction Cost§! until the current ruler dies."
-g_expansion_of_the_royal_bureaucracy:0 "This event gives §G-10% Tech and Idea Cost§! and §G+10% Tax Modifier§! for the next 40 years."
+ g_military_reforms_of_mehmet:0 "This event will grant§G 10% Infanty Combat Ability§! for 20 years."
+ g_enderun_academy:0 "This event gives the choice of §G2.5% Discipline§! or §G10% Cavalry Combat Ability§! for 20 years."
+ g_naval_reform:0 "This event gives §G-5% Ship Cost§! until the end of the game."
+ g_constructions:0 "This event gives §G-10% Development Cost§! and §G-10% Construction Cost§! until the current ruler dies."
+ g_expansion_of_the_royal_bureaucracy:0 "This event gives §G-10% Tech and Idea Cost§! and §G+10% Tax Modifier§! for the next 40 years."
 
-military_reforms_title:0 "Military Reforms"
-military_reforms_desc:0 "The reigns of Mehmed I and Murad II saw the Ottoman Empire reunified after the crushing defeat it had suffered at the hands of Tamerlane. The military was expanded and reformed to match any potential threat and ensure further expansion. It was also during this period that the Ottomans started to realize the vital importance of a strong navy."
-enderun_academy_title:0 "Enderun Academy"
-enderun_academy_desc:0 "In order to train administrators for his expanding empire, Mehmed II established an educational institution in the inner courtyard (Enderun) of the newly constructed Topkapi Palace. Students were chosen from among the most promising devshirme recruits (conscripted Christian youths mostly from the Balkans), and were trained in the Islamic faith, the sciences, and the military arts. They were expected to develop competency in the three languages of Turkish, Arabic, and Persian. This prepared them to serve in the Sultan's household, from which they could hope to graduate as government administrators with the rank of bey or pasha. The staffing of government posts with devshirme recruits trained in the palace school and loyal to the sultan formed the backbone of the Ottoman system of patrimonial rule throughout the fifteenth and sixteenth centuries."
-Great_Naval_Reform_title:0 "The Great Naval Reform"
-Great_Naval_Reform_desc:0 "Selim I, called the Grim, was an ascetic man with a sharp mind. Seeing the threat of the great Christian navies, especially the Venetian one, he realized that the Ottoman Empire had to greatly expand its navy. In emulation of the Arsenale in Venice, he thus ordered the construction of the 'Imperial Halic Shipyard' in Constantinople. The great shipyard stood complete in 1517."
-Mimar_Sinan's_Great_Constructions_title:0 "Mimar Sinan's Great Constructions"
-Mimar_Sinan's_Great_Constructions_desc:0 "Mimar Sinan planned and oversaw the construction of countless mosques, aqueducts, bathhouses, bridges, palaces, caravanserais and schools during his half-a-century long career. His masterpieces were the Selimiye and Suleymaniye Mosques in Adrianople and Constantinople respectively."
-Expansion_of_the_Royal_Bureaucracy_title:0 "Expansion of the Royal Bureaucracy"
-Expansion_of_the_Royal_Bureaucracy_desc:0 "Süleyman I was probably the greatest of the Ottoman Sultans. Called Kanuni (Lawgiver), he was an unsurpassed administrator who realized that the power of the provincial Beys had to be curbed by a strong central government. Thus he struggled to promote a powerful royal bureaucracy which was not popular in all camps..."
+ military_reforms_title:0 "Military Reforms"
+ military_reforms_desc:0 "The reigns of Mehmed I and Murad II saw the Ottoman Empire reunified after the crushing defeat it had suffered at the hands of Tamerlane. The military was expanded and reformed to match any potential threat and ensure further expansion. It was also during this period that the Ottomans started to realize the vital importance of a strong navy."
+ enderun_academy_title:0 "Enderun Academy"
+ enderun_academy_desc:0 "In order to train administrators for his expanding empire, Mehmed II established an educational institution in the inner courtyard (Enderun) of the newly constructed Topkapi Palace. Students were chosen from among the most promising devshirme recruits (conscripted Christian youths mostly from the Balkans), and were trained in the Islamic faith, the sciences, and the military arts. They were expected to develop competency in the three languages of Turkish, Arabic, and Persian. This prepared them to serve in the Sultan's household, from which they could hope to graduate as government administrators with the rank of bey or pasha. The staffing of government posts with devshirme recruits trained in the palace school and loyal to the sultan formed the backbone of the Ottoman system of patrimonial rule throughout the fifteenth and sixteenth centuries."
+ Great_Naval_Reform_title:0 "The Great Naval Reform"
+ Great_Naval_Reform_desc:0 "Selim I, called the Grim, was an ascetic man with a sharp mind. Seeing the threat of the great Christian navies, especially the Venetian one, he realized that the Ottoman Empire had to greatly expand its navy. In emulation of the Arsenale in Venice, he thus ordered the construction of the 'Imperial Halic Shipyard' in Constantinople. The great shipyard stood complete in 1517."
+ Mimar_Sinans_Great_Constructions_title:0 "Mimar Sinan's Great Constructions"
+ Mimar_Sinans_Great_Constructions_desc:0 "Mimar Sinan planned and oversaw the construction of countless mosques, aqueducts, bathhouses, bridges, palaces, caravanserais and schools during his half-a-century long career. His masterpieces were the Selimiye and Suleymaniye Mosques in Adrianople and Constantinople respectively."
+ Expansion_of_the_Royal_Bureaucracy_title:0 "Expansion of the Royal Bureaucracy"
+ Expansion_of_the_Royal_Bureaucracy_desc:0 "Süleyman I was probably the greatest of the Ottoman Sultans. Called Kanuni (Lawgiver), he was an unsurpassed administrator who realized that the power of the provincial Beys had to be curbed by a strong central government. Thus he struggled to promote a powerful royal bureaucracy which was not popular in all camps..."
 
 #Portuguese Missions
 
-gc_por_discovers_prestor_john_title:0 "Find Prester John"
-gc_por_discovers_prestor_john_desc:0 " "
+ gc_por_discovers_prestor_john_title:0 "Find Prester John"
+ gc_por_discovers_prestor_john_desc:0 " "
 
 #Mysorean missions
-gc_mysore_mission_1_title:0 "Cannon Foundries"
-gc_mysore_mission_2_title:0 "Mysorean Rockets"
-gc_mysore_mission_3_title:0 "'Fireworks' Research Institute"
-gc_mysore_mission_4_title:0 "Handheld Rocketry"
-gc_mysore_mission_5_title:0 "Subdue the Marathas"
-gc_mysore_mission_6_title:0 "Advance to Kalyana"
-gc_mysore_mission_7_title:0 "Invade Maharashtra"
-gc_mysore_mission_8_title:0 "City of Victory"
-gc_mysore_mission_9_title:0 "Annihilate Vijayanagar"
-gc_mysore_mission_10_title:0 "A Window to the East"
-gc_mysore_mission_11_title:0 "Conquer Andhra"
-gc_mysore_mission_12_title:0 "The Gandaberunda Ascendant"
-gc_mysore_mission_13_title:0 "Conquer Madurai"
-gc_mysore_mission_14_title:0 "Seize Ceylon"
-gc_mysore_mission_15_title:0 "Dominate Coromandel"
-gc_mysore_mission_16_title:0 "Encourage Craftsmanship"
-gc_mysore_mission_17_title:0 "Expand Our Ports"
-gc_mysore_mission_18_title:0 "A Merchant Navy"
-gc_mysore_mission_19_title:0 "Industral Expansion"
+ gc_mysore_mission_1_title:0 "Cannon Foundries"
+ gc_mysore_mission_2_title:0 "Mysorean Rockets"
+ gc_mysore_mission_3_title:0 "'Fireworks' Research Institute"
+ gc_mysore_mission_4_title:0 "Handheld Rocketry"
+ gc_mysore_mission_5_title:0 "Subdue the Marathas"
+ gc_mysore_mission_6_title:0 "Advance to Kalyana"
+ gc_mysore_mission_7_title:0 "Invade Maharashtra"
+ gc_mysore_mission_8_title:0 "City of Victory"
+ gc_mysore_mission_9_title:0 "Annihilate Vijayanagar"
+ gc_mysore_mission_10_title:0 "A Window to the East"
+ gc_mysore_mission_11_title:0 "Conquer Andhra"
+ gc_mysore_mission_12_title:0 "The Gandaberunda Ascendant"
+ gc_mysore_mission_13_title:0 "Conquer Madurai"
+ gc_mysore_mission_14_title:0 "Seize Ceylon"
+ gc_mysore_mission_15_title:0 "Dominate Coromandel"
+ gc_mysore_mission_16_title:0 "Encourage Craftsmanship"
+ gc_mysore_mission_17_title:0 "Expand Our Ports"
+ gc_mysore_mission_18_title:0 "A Merchant Navy"
+ gc_mysore_mission_19_title:0 "Industral Expansion"
 
-gc_mysore_mission_1_desc:0 ""
-gc_mysore_mission_2_desc:0 ""
-gc_mysore_mission_3_desc:0 ""
-gc_mysore_mission_4_desc:0 ""
-gc_mysore_mission_5_desc:0 ""
-gc_mysore_mission_6_desc:0 ""
-gc_mysore_mission_7_desc:0 ""
-gc_mysore_mission_8_desc:0 ""
-gc_mysore_mission_9_desc:0 ""
-gc_mysore_mission_10_desc:0 ""
-gc_mysore_mission_11_desc:0 ""
-gc_mysore_mission_12_desc:0 ""
-gc_mysore_mission_13_desc:0 ""
-gc_mysore_mission_14_desc:0 ""
-gc_mysore_mission_15_desc:0 ""
-gc_mysore_mission_16_desc:0 ""
-gc_mysore_mission_17_desc:0 ""
-gc_mysore_mission_18_desc:0 ""
-gc_mysore_mission_19_desc:0 ""
+ gc_mysore_mission_1_desc:0 ""
+ gc_mysore_mission_2_desc:0 ""
+ gc_mysore_mission_3_desc:0 ""
+ gc_mysore_mission_4_desc:0 ""
+ gc_mysore_mission_5_desc:0 ""
+ gc_mysore_mission_6_desc:0 ""
+ gc_mysore_mission_7_desc:0 ""
+ gc_mysore_mission_8_desc:0 ""
+ gc_mysore_mission_9_desc:0 ""
+ gc_mysore_mission_10_desc:0 ""
+ gc_mysore_mission_11_desc:0 ""
+ gc_mysore_mission_12_desc:0 ""
+ gc_mysore_mission_13_desc:0 ""
+ gc_mysore_mission_14_desc:0 ""
+ gc_mysore_mission_15_desc:0 ""
+ gc_mysore_mission_16_desc:0 ""
+ gc_mysore_mission_17_desc:0 ""
+ gc_mysore_mission_18_desc:0 ""
+ gc_mysore_mission_19_desc:0 ""
 
 #Ethiopian missions
 
-prestor_john_title:0 "Prestor John"
-prestor_john_desc:0 " "
-g_help_from_the_west:0 "This event will grant§G 10% Land Morale§! §G5% Discpline§! and §G 20% Manpower§! for 10 years."
+ prestor_john_title:0 "Prestor John"
+ prestor_john_desc:0 " "
+ g_help_from_the_west:0 "This event will grant§G 10% Land Morale§! §G5% Discpline§! and §G 20% Manpower§! for 10 years."
 
-gc_eth_mission_1_title:0 "Prepare a Navy"
-gc_eth_mission_2_title:0 "European Ties"
-gc_eth_mission_3_title:0 "Help from Portugal"
-gc_eth_mission_4_title:0 "Fortify Arabia"
-gc_eth_mission_5_title:0 "Free Adan"
-gc_eth_mission_6_title:0 "Arabian Foothold"
-gc_eth_mission_7_title:0 "Dominate Yemen"
-gc_eth_mission_8_title:0 "Advance on Hormuz"
-gc_eth_mission_9_title:0 "Control Mecca"
-gc_eth_mission_10_title:0 "Coptic Reformed"
-gc_eth_mission_11_title:0 "Prepare for War"
-gc_eth_mission_12_title:0 "Follow the Nile"
-gc_eth_mission_13_title:0 "Subjugate Funj"
-gc_eth_mission_14_title:0 "Conquer Sudan"
-gc_eth_mission_15_title:0 "Free Qasr Ibrim"
-gc_eth_mission_16_title:0 "Seize Cairo"
-gc_eth_mission_17_title:0 "Free Alexandria"
-gc_eth_mission_18_title:0 "Subjugate Somalia"
-gc_eth_mission_19_title:0 "The Horn of Africa"
-gc_eth_mission_20_title:0 "Along the Horn"
-gc_eth_mission_21_title:0 "Religious Bastion"
-gc_eth_mission_22_title:0 "Expand Gold Mines"
-gc_eth_mission_23_title:0 "Spread our Faith"
-gc_eth_mission_24_title:0 "Legacy of Prester John"
-gc_eth_mission_25_title:0 "Crusade from Africa"
+ gc_eth_mission_1_title:0 "Prepare a Navy"
+ gc_eth_mission_2_title:0 "European Ties"
+ gc_eth_mission_3_title:0 "Help from Portugal"
+ gc_eth_mission_4_title:0 "Fortify Arabia"
+ gc_eth_mission_5_title:0 "Free Adan"
+ gc_eth_mission_6_title:0 "Arabian Foothold"
+ gc_eth_mission_7_title:0 "Dominate Yemen"
+ gc_eth_mission_8_title:0 "Advance on Hormuz"
+ gc_eth_mission_9_title:0 "Control Mecca"
+ gc_eth_mission_10_title:0 "Coptic Reformed"
+ gc_eth_mission_11_title:0 "Prepare for War"
+ gc_eth_mission_12_title:0 "Follow the Nile"
+ gc_eth_mission_13_title:0 "Subjugate Funj"
+ gc_eth_mission_14_title:0 "Conquer Sudan"
+ gc_eth_mission_15_title:0 "Free Qasr Ibrim"
+ gc_eth_mission_16_title:0 "Seize Cairo"
+ gc_eth_mission_17_title:0 "Free Alexandria"
+ gc_eth_mission_18_title:0 "Subjugate Somalia"
+ gc_eth_mission_19_title:0 "The Horn of Africa"
+ gc_eth_mission_20_title:0 "Along the Horn"
+ gc_eth_mission_21_title:0 "Religious Bastion"
+ gc_eth_mission_22_title:0 "Expand Gold Mines"
+ gc_eth_mission_23_title:0 "Spread our Faith"
+ gc_eth_mission_24_title:0 "Legacy of Prester John"
+ gc_eth_mission_25_title:0 "Crusade from Africa"
 
-gc_eth_mission_1_desc:0 ""
-gc_eth_mission_2_desc:0 ""
-gc_eth_mission_3_desc:0 ""
-gc_eth_mission_4_desc:0 ""
-gc_eth_mission_5_desc:0 ""
-gc_eth_mission_6_desc:0 ""
-gc_eth_mission_7_desc:0 ""
-gc_eth_mission_8_desc:0 ""
-gc_eth_mission_9_desc:0 ""
-gc_eth_mission_10_desc:0 "Changes Government Type to Ethiopian Theocracy."
-gc_eth_mission_11_desc:0 ""
-gc_eth_mission_12_desc:0 ""
-gc_eth_mission_13_desc:0 ""
-gc_eth_mission_14_desc:0 ""
-gc_eth_mission_15_desc:0 ""
-gc_eth_mission_16_desc:0 ""
-gc_eth_mission_17_desc:0 ""
-gc_eth_mission_18_desc:0 ""
-gc_eth_mission_19_desc:0 ""
-gc_eth_mission_20_desc:0 ""
-gc_eth_mission_21_desc:0 ""
-gc_eth_mission_22_desc:0 ""
-gc_eth_mission_23_desc:0 ""
-gc_eth_mission_24_desc:0 "Gives -1 Yearly Prestige Decay and 2 Tolerance of True Faith."
-gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed."
+ gc_eth_mission_1_desc:0 ""
+ gc_eth_mission_2_desc:0 ""
+ gc_eth_mission_3_desc:0 ""
+ gc_eth_mission_4_desc:0 ""
+ gc_eth_mission_5_desc:0 ""
+ gc_eth_mission_6_desc:0 ""
+ gc_eth_mission_7_desc:0 ""
+ gc_eth_mission_8_desc:0 ""
+ gc_eth_mission_9_desc:0 ""
+ gc_eth_mission_10_desc:0 "Changes Government Type to Ethiopian Theocracy."
+ gc_eth_mission_11_desc:0 ""
+ gc_eth_mission_12_desc:0 ""
+ gc_eth_mission_13_desc:0 ""
+ gc_eth_mission_14_desc:0 ""
+ gc_eth_mission_15_desc:0 ""
+ gc_eth_mission_16_desc:0 ""
+ gc_eth_mission_17_desc:0 ""
+ gc_eth_mission_18_desc:0 ""
+ gc_eth_mission_19_desc:0 ""
+ gc_eth_mission_20_desc:0 ""
+ gc_eth_mission_21_desc:0 ""
+ gc_eth_mission_22_desc:0 ""
+ gc_eth_mission_23_desc:0 ""
+ gc_eth_mission_24_desc:0 "Gives -1 Yearly Prestige Decay and 2 Tolerance of True Faith."
+ gc_eth_mission_25_desc:0 "Gives -1 Army Tradition Decay and 10% Movementspeed."
 
  #Crimea 
 
