--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -4,11 +4,10 @@
  novgorod:0 "Moscow"
  white_sea:0 "Novgorod"
  trade_company_caucasus:0 "Caucasian Charter"
- aleppo:0 "Mashriq"
- venice:0 "Venice"
  tunis:0 "Algiers"
  ragusa:0 "Thrace"
- sicily:0 "Palermo"
  genua:0 "Milan"
  venice:0 "Rome"
  basra:0 "Arabia"
+ TRADE_COMPANY_caucasus_Root_Culture_GetName:0 "[Root.Culture.GetName] Caucasus Company"
+ TRADE_COMPANY_caucasus_Near_East_Trade_Company:0 "[Root.Culture.GetName] Caucasus Company"
