--- a/localisation/persia_changes_l_english.yml
+++ b/localisation/persia_changes_l_english.yml
@@ -186,18 +186,14 @@
  caucasus_integration:0 "Integration of the Caucasus"
  #qq
  PR_qar_missions4_reward:0 "Unlock Clergy Exploration Expeditions Estate Privilege"
- PR_qar_missions1_desc_title:0 "Conquer Samtskhe"
- PR_qar_missions1_desc_desc:0 "TBD"
- PR_qar_missions2_desc_title:0 "Secure the Caucasus"
- PR_qar_missions2_desc_desc:0 "TBD"
  PR_qar_missions3_desc_title:0 "Into Arabia"
- PR_qar_missions3_desc_desc:0 "TBD"
+ PR_qar_missions3_desc_desc:0 ""
  PR_qar_missions4_desc_title:0 "Settle the Deserts"
- PR_qar_missions4_desc_desc:0 "TBD"
+ PR_qar_missions4_desc_desc:0 ""
  PR_qar_missions5_desc_title:0 "Follow the Coast"
- PR_qar_missions5_desc_desc:0 "TBD"
+ PR_qar_missions5_desc_desc:0 ""
  PR_qar_missions6_desc_title:0 "Consolidate Yemen"
- PR_qar_missions6_desc_desc:0 "TBD"
+ PR_qar_missions6_desc_desc:0 ""
  #diplomatic setup
  sm_tooltip_mamottoally:0 "We cannot ally the House of Osman."
  sm_tooltip_ottomamally:0 "We cannot ally the Mamluk Sultanate."
