--- a/localisation/origins_l_english.yml
+++ b/localisation/origins_l_english.yml
@@ -673,7 +673,7 @@
  estate_church_heir_shrine_desc:0 "Usually cults are a matter of our [Root.Monarch.GetTitle]s and not for their heirs. This can be changed though by building shrines, which serve our heirs as a religious retreat, allowing them to express their own belief into a certain cult."
  estate_burghers_hydraulic_rights:0 "Hydraulic Rights"
  estate_burghers_hydraulic_rights_desc:0 "The distribution of water has always been a topic the remote villages worry about. Through allowing the [Root.GetBurghersName] taking a more direct control over the rights of water we can ensure a fair and efficient distribution of water access."
- estate_burghers_enslaving_rights_gt:0 "Reduce the Development Cost caused by Terrain type of every owned §YDesert§!, §YCoastal Desert§!, §YSteppes§! and §YSavanna§! province by §G50.0%§!."
+ estate_burghers_enslaving_rights_gt:0 "Reduce the Development Cost caused by Terrain type of every owned §YDesert§!, §YCoastal Desert§!, §YSteppes§! and §YSavanna§! province to §G5%§!."
  estate_burghers_enslaving_rights_rt:0 "Remove the Development Cost Reduction of every owned §YDesert§!, §YCoastal Desert§!, §YSteppes§! and §YSavanna§! province."
  estate_nobles_cawa_peace_keepers:1 "Assign Cawa Peacekeepers"
  estate_nobles_cawa_peace_keepers_desc:0 "The Cawa are the elite force and noble warrior class of Ethiopia. By granting certain privileges to them we can ensure that they use their skills to keep the peace in our remote provinces."
