--- a/localisation/gecko_countries_l_english.yml
+++ b/localisation/gecko_countries_l_english.yml
@@ -14,3 +14,7 @@
   NGF_ADJ:0 "North German"
   SGF:0 "South German Federation"
   SGF_ADJ:0 "South German"
+
+  #Italy
+  GC_EMPIRE_OF_GOD:0 "Empire of God"
+  GC_EMPIRE_OF_GOD_ADJ:0 "Heavenly"
