--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -61,3 +61,7 @@
 
  gc_form_sgf_title:0 "Unite South Germany"
  gc_form_sgf_desc:0 ""
+
+ #Italians
+ gc_restore_roman_empire_as_pope_title:0 "Empire of God"
+ gc_restore_roman_empire_as_pope_desc:0 "The Roman Empire, probably one of the greatest Empires to ever exist, must be reunited under Gods oversight. We will reclaim what is rightfully Christian and drive off the Heathens occupying these lands."
