--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -65,3 +65,8 @@
  #Italians
  gc_restore_roman_empire_as_pope_title:0 "Empire of God"
  gc_restore_roman_empire_as_pope_desc:0 "The Roman Empire, probably one of the greatest Empires to ever exist, must be reunited under Gods oversight. We will reclaim what is rightfully Christian and drive off the Heathens occupying these lands."
+
+#mongolia
+
+reunite_mongols_title:0 "Reunite Mongols"
+reunite_mongols_desc:0 ""
