--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -255,4 +255,4 @@
 #arabia
 
 ARB_conquest_1_title:0 "Conquest of Mesopotamia"
-ARB_conquest_1_desc:0 "Completing this mission and §reaching 1650§! will grant access to the Wahabi Scholar, giving §G15% Land Morale§! but maluses to Heretic and Heathen religions."
+ARB_conquest_1_desc:0 "Completing this mission and §Greaching 1650§! will grant access to the Wahabi Scholar, giving §G15% Land Morale§! but maluses to Heretic and Heathen religions."
