Persia far easier to form and has recovery effects

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -70,3 +70,10 @@
 
 reunite_mongols_title:0 "Reunite Mongols"
 reunite_mongols_desc:0 ""
+
+#persia
+
+persian_nation_isfahan_title:0 "Form Persian Nation"
+persian_nation_isfahan_desc:0 ""
+persian_nation_ardabil_title:0 "Form Persian Nation"
+persian_nation_ardabil_desc:0 ""
