Added renaissance spread in 30+ dev provinces

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -69,3 +69,5 @@
  h_swedish_armies_desc:0 "Gustavus Adolphus would go on to lead Sweden to victory in numerous wars and battles, while also setting in motion the rise of Sweden after his death. He is credited for being the 'father of modern warfare' and is regarded as one of the greatest military commanders in modern history."
  gc_take_influence_ideas_for_marches:0 "Has Marcher Lord unlocked in Influence Ideas"
  ANNEX_TOO_LOW:0 "Your vassal needs to have at least §Y+100§! opinion of you for you to be able to start an annexation."
+ tooltip_development_30:0 "European 30 development province"
+ tooltip_thrace_area:0 "Province in the Thrace Area"
