--- a/localisation/persia_changes_l_english.yml
+++ b/localisation/persia_changes_l_english.yml
@@ -64,7 +64,7 @@
  mechanic_qizilbash_discipline_looting_interaction_no: " " #intentionally empty
  mechanic_qizilbash_officer_interaction_yes: "Enables the Qizilbash Estate Privilege §YQizilbash in Officer Corps§!, which gives the Qizilbash control of the Office of the Tufangchi-bashi, and §G+10%§! Siege Ability."
  mechanic_qizilbash_officer_interaction_no: " " #intentionally empty
- mechanic_ghilman_morale_interaction_yes: "Enables the Ghilman Estate Privilege §YReform the Ghilman Corps§!, which grants §G+10%§! Morale of Armies on Janissaries."
+ mechanic_ghilman_morale_interaction_yes: "Enables the Ghilman Estate Privilege §YReform the Ghilman Corps§!, which grants §G+10%§! Infantry Combat on Janissaries."
  mechanic_ghilman_morale_interaction_no: " " #intentionally empty
  #ottomans#
  mechanic_enables_janissary_estate_yes: "Janissaries Estate becomes available."
@@ -73,7 +73,7 @@
  mechanic_upgrade_janissary_weaponry_privilege_interaction_no: " " #intentionally empty
  mechanic_establish_auxiliary_support_system_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YEstablish Janissary Auxiliary Corps§!, which grants §G+5.0%§! Manpower Recovery Speed and §G+10.0%§! Reinforce Speed."
  mechanic_establish_auxiliary_support_system_privilege_interaction_no: " " #intentionally empty
- mechanic_reform_the_janissaries_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YReform the Janissary Corps§!, which grants §G+10.0%§! Morale to §YJanissary Regiments§!."
+ mechanic_reform_the_janissaries_privilege_interaction_yes: "Enables the Janissaries Estate Privilege §YReform the Janissary Corps§!, which grants §G+15%§! Infantry Combat to §YJanissary Regiments§!."
  mechanic_reform_the_janissaries_privilege_interaction_no: " " #intentionally empty
  ######estates and loyalty/influence modifiers######
  #ghilman#
