Sicily missions buffed slightly

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -71,4 +71,5 @@
  ANNEX_TOO_LOW:0 "Your vassal needs to have at least §Y+100§! opinion of you for you to be able to start an annexation."
  tooltip_development_30:0 "European 30 development province"
  tooltip_thrace_area:0 "Province in the Thrace Area"
- military_genius_personality:0 "Military Genius"
+ Decay_minor:0 "Minor Decay"
+ We_stand_alone:0 "We Stand Alone"
