--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -263,3 +263,5 @@ gc_emp_nap_dalmatian_conquest_title:0 "Italian Conquest"
 gc_emp_nap_dalmatian_conquest_desc:0 ""
 gc_emp_nap_despot_of_epirus_title:0 "Neapolitan Conquest"
 gc_emp_nap_despot_of_epirus_desc:0 ""
+sic_high_income_mission_title:0 "High Income"
+sic_high_income_mission_desc:0 ""
