More provinces added to northern germany

--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -64,3 +64,5 @@ namibia_area:0 "Namibia"
 namibia_area_name:0 "Namibia"
 namibia_area_adj:0 "Namibia"
 XMP_central_greece_area:0 "Central Greece"
+berlin_area:0 "Berlin"
+lubeck_area:0 "Lubeck"
