Florence monument re-enabled

--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -77,3 +77,4 @@
  cb_nice_borders_desc:0 ""
  nice_borders_cb:0 "Border Claims"
  nice_borders_cb_desc:0 ""
+ gc_naples:0 "Naples may not make alliances."
