--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -265,3 +265,8 @@ gc_emp_nap_despot_of_epirus_title:0 "Neapolitan Conquest"
 gc_emp_nap_despot_of_epirus_desc:0 ""
 sic_high_income_mission_title:0 "High Income"
 sic_high_income_mission_desc:0 ""
+
+#England
+
+gc_eng_rb_take_gibraltar_title:0 "Take Copenhagen"
+gc_eng_rb_take_gibraltar_desc:0 ""
