Conquest of Copenhagen modifier added

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -50,6 +50,7 @@
  the_motherland_calls:0 "The Motherland Calls"
  gc_cagliari_copper:0 "Cagliari Copper"
  gc_catanzaro_silk:0 "Catanzaro Silk"
+ conquest_of_copenhagen:0 "Conquest of Copenhagen"
 
  #Advisor Event modifiers
  gc_arty_officer_delayed:0 "Arty Officer Delayed"
