Swiss province changes part finished

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3728,6 +3728,7 @@
  RAND_SEA_NAME078:0 "Sea of Test78"
  RAND_SEA_NAME079:0 "Sea of Test79"
 
+PROV4721:0 "Neuchatel"
 PROV6159:0 "Gustrow"
 PROV6160:0 "Parchim"
 PROV6161:0 "Schwerin"
@@ -3738,3 +3739,11 @@ PROV6165:0 "Segeberg"
 PROV6166:0 "Holstein"
 PROV6167:0 "Pinneberg"
 PROV6168:0 "Gluckstadt"
+PROV6169:0 "Basel"
+PROV6170:0 "Fribourg"
+PROV6171:0 "Gruyere"
+PROV6172:0 "Ticino"
+PROV6173:0 "Lucerne"
+PROV6174:0 "Toggenburg"
+PROV6175:0 "Davos"
+PROV6176:0 "Valtelina"
