--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -66,3 +66,5 @@ namibia_area_adj:0 "Namibia"
 XMP_central_greece_area:0 "Central Greece"
 berlin_area:0 "Berlin"
 lubeck_area:0 "Lubeck"
+bern_area:0 "Bern"
+grisons_area:0 "Grisons"
