--- a/localisation/FU_Switzerland_l_english.yml
+++ b/localisation/FU_Switzerland_l_english.yml
@@ -80,7 +80,7 @@
  swi_2_years_income_from_cloth_tt: "from our provinces that produce §YCloth§!"
  swi_capital_venture: "Swiss Capital Venture"
  swi_income_from_silver_tt: "from our Silver production"
- swi_enable_cantons_tt: "Enables the §YCanton§! subject type which can be established either via diplomacy or military means. \nEach Canton will grant Republican Tradition and you may only have 4 Cantons at one time.\n\n§MPlease note that Paradox's Aggressive Expansion calculation is wack and will display greatly inflated numbers when it comes to establishing a Canton via a peacedeal option when in reality the actual AE will be far far less!§!"
+ swi_enable_cantons_tt: "Enables the §YCanton§! subject type which can be established either via diplomacy or military means. \nEach Canton will grant Republican Tradition and you may only have 4 Cantons at one time."
  swi_relations_with_heretics: "Every §RHeretic§! country will gain §G25§! opinion of us"
  
  #Modifiers#
