--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -270,3 +270,8 @@ sic_high_income_mission_desc:0 ""
 
 gc_eng_rb_take_gibraltar_title:0 "Take Copenhagen"
 gc_eng_rb_take_gibraltar_desc:0 ""
+
+#songhai mission
+
+gc_son_take_djenne_title:0 "Conquer Zazzau"
+gc_son_take_djenne_desc:0 ""
