--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3747,3 +3747,21 @@ PROV6173:0 "Lucerne"
 PROV6174:0 "Toggenburg"
 PROV6175:0 "Davos"
 PROV6176:0 "Valtelina"
+PROV6177:0 "Kammen"
+PROV6178:0 "Pyritz"
+PROV6179:0 "Lebus"
+PROV6180:0 "Krems"
+PROV6182:0 "Baden"
+PROV6183:0 "Braunau"
+PROV6184:0 "Amberg"
+PROV6185:0 "Bruck"
+PROV6186:0 "Neukurch"
+PROV6187:0 "Suffolk"
+PROV6188:0 "Bedford"
+PROV6189:0 "Surrey"
+PROV6190:0 "Berkshire"
+PROV6191:0 "Wiltshire"
+PROV6192:0 "Gandia"
+PROV6193:0 "Loja"
+PROV6194:0 "Aracena"
+PROV6195:0 "Azuaga"
