--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -68,3 +68,6 @@ berlin_area:0 "Berlin"
 lubeck_area:0 "Lubeck"
 bern_area:0 "Bern"
 grisons_area:0 "Grisons"
+cordoba_area:0 "Cordoba"
+oxford_area:0 "Oxford"
+outer_austria_area:0 "Outer Austria"
