--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -11,7 +11,7 @@
  basra:0 "Arabia"
  TRADE_COMPANY_caucasus_Root_Culture_GetName:0 "[Root.Culture.GetName] Caucasus Company"
  TRADE_COMPANY_caucasus_Near_East_Trade_Company:0 "[Root.Culture.GetName] Caucasus Company"
- gc_south_germany_tradenode:0 "South Germany"
- TRADE_COMPANY_south_germany_Root_Culture_GetName:0 "[Root.Culture.GetName] South German Company"
- TRADE_COMPANY_south_germany_Trade_Company:0 "[Root.Culture.GetName] South German Company"
- trade_company_south_germany:0 "South German Charter"
+ gc_south_germany_tradenode:0 "Wurttemberg"
+ TRADE_COMPANY_south_germany_Root_Culture_GetName:0 "[Root.Culture.GetName] Swabian Company"
+ TRADE_COMPANY_south_germany_Trade_Company:0 "[Root.Culture.GetName] Swabian Company"
+ trade_company_south_germany:0 "Wurttemberg Charter"
