Netherlands region updated

--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -71,3 +71,4 @@ grisons_area:0 "Grisons"
 cordoba_area:0 "Cordoba"
 oxford_area:0 "Oxford"
 outer_austria_area:0 "Outer Austria"
+east_frisia_area:0 "East Frisia"
