--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3764,3 +3764,10 @@ PROV6192:0 "Gandia"
 PROV6193:0 "Loja"
 PROV6194:0 "Aracena"
 PROV6195:0 "Azuaga"
+PROV6196:0 "Dunkirk"
+PROV6197:0 "Nieuport"
+PROV6199:0 "Mechelen"
+PROV6200:0 "Maastricht"
+PROV6201:0 "Zutphen"
+PROV6202:0 "Stellingwerven"
+PROV6203:0 "Nijmegen"
