--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -78,4 +78,5 @@
  nice_borders_cb:0 "Border Claims"
  nice_borders_cb_desc:0 ""
  gc_naples:0 "Naples may not make alliances."
+ gc_denmark:0 "Denmark may not make alliances."
  GUARANTEEINVALID:0 "You may not guarantee a nation unless you have an alliance and §Y+100§! Relations with them."
