Anti gank defensive ottoman mission added if ottomans are defending against both hungary and mamluks

--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -83,6 +83,8 @@
  conquer_caucasia_title:0 "Conquer Caucasia"
  conquer_kurdistan_desc:0 ""
  conquer_caucasia_desc:0 ""
+ repulse_gank_title:0 "Defense of Anatolia"
+ repulse_gank_desc:0 ""
 #Portuguese Missions
 
  gc_por_discovers_prestor_john_title:0 "Find Prester John"
