why do you loser nerds have ruin everything go touch grass

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -108,6 +108,8 @@
 
  france_united:0 "France United"
  desc_france_united:0 "We have united the French lands much to betterment of our armies"
+ lowland_conquest:0 "Conquest of Flanders"
+ desc_lowland_conquest:0 "We have re-integrated the lands of Flanders into our realm permanently. Show the rest of Europe our Elan!"
 
  #Ottoman Missions
 
