--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -51,6 +51,8 @@
  gc_cagliari_copper:0 "Cagliari Copper"
  gc_catanzaro_silk:0 "Catanzaro Silk"
  conquest_of_copenhagen:0 "Conquest of Copenhagen"
+ conquest_of_amsterdam:0 "Conquest of Amsterdam"
+ caliph_of_cairo:0 "Seat of the Caliph of Cairo"
 
  #Advisor Event modifiers
  gc_arty_officer_delayed:0 "Arty Officer Delayed"
