--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -80,3 +80,11 @@
  gc_naples:0 "Naples may not make alliances."
  gc_denmark:0 "Denmark may not make alliances."
  GUARANTEEINVALID:0 "You may not guarantee a nation unless you have an alliance and §Y+100§! Relations with them."
+
+ gme_alkarak_castle: "Kerak Castle"
+ gme_aleppo_citadel: "Citadel of Aleppo"
+ gme_damascus_al_azem_palace: "Qasr al-Azm"
+ gme_jerusalem_cave_patriarch: "Cave of the Patriarchs"
+ gme_tripoli_krak_des_chevaliers: "Krak des Chevaliers"
+ gme_tripoli_citadel: "Citadel of Tripoli"
+ gme_constantinople_theodosian_walls: "Theodosian Walls"
