--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -6,8 +6,8 @@
  trade_company_caucasus:0 "Caucasian Charter"
  tunis:0 "Algiers"
  ragusa:0 "Thrace"
- genua:0 "Milan"
- venice:0 "Rome"
+ genua:0 "Italy"
+ #venice:0 "Rome"
  basra:0 "Arabia"
  TRADE_COMPANY_caucasus_Root_Culture_GetName:0 "[Root.Culture.GetName] Caucasus Company"
  TRADE_COMPANY_caucasus_Near_East_Trade_Company:0 "[Root.Culture.GetName] Caucasus Company"
