New reform added

--- a/localisation/gecko_government_l_english.yml
+++ b/localisation/gecko_government_l_english.yml
@@ -7,6 +7,8 @@
  empire_of_hungary_reform_desc:0 "The former Kingdom of Hungary has been elevated to an empire through its just conquests."
  gecko_noble_regiments_reform:0 "Noble Regiments"
  gecko_noble_regiments_reform_desc:0 "The state is me. And my armies.."
+ gecko_professional_army_reform:0 "Professional Army"
+ gecko_professional_army_reform_desc:0 "An army with a state."
  tribal_innovation:0 "Innovation"
 
  #Ethiopia
