--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -26,6 +26,8 @@
  gc_urbanisation:0 "Forced Urbanisation"
  empowered_subjects:0 "Empowered Subject"
  gc_african_corridor:0 "Trans-Saharan Corridor"
+ War_chest:0 "War Chest"
+ War_chest_late:0 "War Chest"
 
  #Province Triggered Modifiers
  conquest_of_constantinople:0 "Conquest of Constantinople"
