--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -99,3 +99,8 @@
   gc_UBV_NI_5_desc:0 ""
   gc_UBV_NI_6_desc:0 ""
   gc_UBV_NI_7_desc:0 ""
+
+  #Habsburg Empire
+  AHU_ideas:0 "Habsburg Empire Ideas"
+  AHU_ideas_start:0 "Habsburg Traditions"
+  AHU_ideas_bonus:0 "Habsburg Ambitions"
