--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -123,3 +123,7 @@
  gc_bavarian_event.1.t:0 "Unification of Bavaria"
  gc_bavarian_event.1.d:0 "The Wittelsbach in Bavaria have been united under one. We shall be a dominant power in Germany with the new found riches of our family."
  gc_bavarian_event.1.a:0 "Gott mit uns!"
+
+ #Gecko Austria
+ flavor_hab.20.gc:0 "We may not abandon our German roots."
+ gecko_habsburg_empire_requirements_tooltip:0 "The Entirety of Austria, Bohemia and Hungary must be directly controlled by us. Furthermore we must secure our Ambitions in Italy and conquer the City of Venice."
